# agentic-society-neo

./: .dockerignore  .gitignore  CLAUDE.md  CLOUD_DEPLOYMENT.md  DEPLOYMENT.md  Dockerfile  Procfile  README-ZH.md  README.en.md  README.md  config.json  deploy.sh  docker-compose.yml  duplicate_persona.py  pyproject.toml  qwen_test.py  requirements.txt  sample_parquet.py  start_production.sh  test_api.py  test_multi_mahalanobis.html  test_multi_panel.py
.claude/: settings.local.json
.gemini/: GEMINI.md
R/: bifactor.R  cfa.R  parcelcfa.R  parcelcfaplus.R  relation.R  simplebifactor.R
asociety/: config.py  utils.py
data/: question_set.sql
doc/: conversation_log.md  identifiability_analysis_en.md  identifiability_analysis_zh.md  meditation.md  personality.json  references.md  sheet.jsonl  stability_analysis_en.md  stability_analysis_zh.md  studio_analysis_guide_zh.md
learn/: app.py  generative_agents_interactive_simulacra_of_human_behavior.py  grade.py  graph.py  langchain_learn.py  multi_agent_collaboration.py  nemo_persona.py  rewoo.py
metasrc/: analysis.md
post/: another discussion on vfa.md  why-cfa-fails-for-llm-personality-comprehensive-analysis.md  为什么CFA不适合LLM人格研究-中文版.md
prompts/: chat.json  experiment.json  generation.json  request.tex
studio/: analysis_panel_utils.py  antialign_comparison_panel.py  astudio.py  base_curve_panel.py  base_curve_panel.py.backup  clustering_panel.py  collapsible_help_panel.py  comparison_panel.py  config_panel.py  curve_comparison_panel.py  help_constants.py  help_panel.py  identifiability_panel.py  languages.py  (+14 more)
(+130 files in other folders)
